--- a/templates/index.html
+++ b/templates/index.html
@@ -5,37 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>주식탐색기</title>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" />
+
     <style>
-        .my_form {
+        .myForm {
             align-items: center;
             justify-content: center;
         }
-
-        .my_input {
-            width: 36vw;
-        }
     </style>
-    <script>
-        function close_first_open_second() {
-            $("#first_form").hide()
-            $("#second_form").show()
-        }
-
-        function close_second_open_third() {
-            $("#second_form").hide()
-            $("#third_form").show()
-        }
-
-        $(document).ready(() => {
-            $("#second_form").hide()
-            $("#third_form").hide()
-        })
-    </script>
 </head>
 
 <body>
@@ -43,61 +24,53 @@
         <div class="container">
             <h1 class="text-body-emphasis">국내주식 탐색기</h1>
             <p class="col-lg-8 mx-auto lead">
-                원하는 키워드로 국내주식을 찾을 수 있습니다. (예: "양극" 입력시 양극재 주식 조회)
+                원하는 키워드로 국내주식을 찾을 수 있습니다.
             </p>
-
-            <form action="/main/" method="POST" class="my_form">
-                <div id="first_form" >
-                    <p class="col-lg-8 mx-auto lead">
-                        1단계. 시작을 위해 opendart api에서 발급받은 api key를 입력해주세요.
-                    </p>
-                    <div class="my_form row g-2">
-                        <div class="col-auto">
-                            <input type="text" name="api_key" placeholder="opendart api key" class="form-control my_input">
-                        </div>
-                        <div class="col-auto">
-                            <button type="button" class="btn btn-primary" onclick=close_first_open_second()>입력</button>
-                        </div>
-                    </div>
-                </div>
-                <div id="second_form" >
-                    <p class="col-lg-8 mx-auto lead">
-                        1단계. api key가 입력되었습니다.
-                    </p>
-                    <p class="col-lg-8 mx-auto lead">
-                        2단계. 시가총액을 조회할 기준일을 입력해주세요.
-                    </p>
-                    <div class="my_form row g-2">
-                        <div class="col-auto">
-                            <input type="text" name="search_date" placeholder="형식: YYYYMMDD" class="form-control my_input">
-                        </div>
-                        <div class="col-auto">
-                            <button type="button" class="btn btn-primary" onclick=close_second_open_third()>입력</button>
-                        </div>
-                    </div>
-                </div>
-                <div id="third_form">
-                    <p class="col-lg-8 mx-auto lead">
-                        1단계. api key가 입력되었습니다.
-                    </p>
-                    <p class="col-lg-8 mx-auto lead">
-                        2단계. 조회일자가 입력되었습니다.
-                    </p>
-                    <p class="col-lg-8 mx-auto lead">
-                        3단계. 검색할 키워드를 입력해주세요.
-                    </p>
-                    <div id="third_form" class="my_form row g-2">
-                        <div class="col-auto">
-                            <input type="text" name="search_keyword" placeholder="예시: 양극" class="form-control my_input">
-                        </div>
-                        <div class="col-auto">
-                            <button type="submit" class="btn btn-primary">입력</button>
-                        </div>
-                    </div>
-                </div>
-            </form>
         </div>
+
+        <form action="/search" method="POST" class="myForm">
+            <div id="firstForm">
+                <p class="col-md-8 mx-auto">
+                    기준일자와 키워드를 기입한 후 입력 버튼을 눌러주세요.
+                </p>
+                <div class="myForm row g-2">
+                    <div class="col-auto">
+                        <input type="date" name="searchDate" class="form-control" id="searchDate" min="2023-04-20">
+                    </div>
+                    <div class="col-auto">
+                        <input type="text" name="searchKeyword" placeholder="(예시: 반도체)" class="form-control"
+                            id="searchKeyword">
+                    </div>
+                    <div class="col-auto">
+                        <button type="submit" class="btn btn-primary">입력</button>
+                    </div>
+                </div>
+            </div>
+        </form>
     </div>
+
+    <footer class="py-3 my-4">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+            <li class="nav-item"><a href="/" class="nav-link px-2 text-body-secondary">처음으로</a></li>
+            <li class="nav-item"><a href="/bookmarks" class="nav-link px-2 text-body-secondary">나의북마크</a></li>
+            <li class="nav-item"><a href="/readme" class="nav-link px-2 text-body-secondary">간단설명서</a></li>
+        </ul>
+        <p class="text-center text-body-secondary">주식 탐색기 🔍</p>
+    </footer>
+
+    <script>
+        function getToday() {
+            var date = new Date();
+            var year = date.getFullYear();
+            var month = ("0" + (1 + date.getMonth())).slice(-2);
+            var day = ("0" + date.getDate()).slice(-2);
+
+            return year + '-' + month + '-' + day;
+        }
+        todayDate = getToday();
+        document.getElementById('searchDate').setAttribute('max', todayDate);
+    </script>
+
 </body>
 
 </html>
